src/tests/snapshots/cargo_vet__tests__vet__builtin-cycle-full-audited.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "context": null,
  "conclusion": "success",
  "vetted_fully": [
    {
      "name": "normal",
      "version": "10.0.0"
    },
    {
      "name": "dev-cycle",
      "version": "10.0.0"
    }
  ],
  "vetted_partially": [],
  "vetted_with_exemptions": []
}
