src/tests/snapshots/cargo_vet__tests__vet__builtin-cycle-inited.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "context": null,
  "conclusion": "success",
  "vetted_fully": [],
  "vetted_partially": [],
  "vetted_with_exemptions": [
    {
      "name": "normal",
      "version": "10.0.0"
    },
    {
      "name": "dev-cycle",
      "version": "10.0.0"
    }
  ]
}
