src/tests/snapshots/cargo_vet__tests__vet__builtin-dev-detection-cursed-minimal.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "context": null,
  "conclusion": "success",
  "vetted_fully": [
    {
      "name": "both",
      "version": "10.0.0"
    },
    {
      "name": "normal",
      "version": "10.0.0"
    },
    {
      "name": "dev-cycle-indirect",
      "version": "10.0.0"
    },
    {
      "name": "dev-cycle-direct",
      "version": "10.0.0"
    },
    {
      "name": "simple-dev-indirect",
      "version": "10.0.0"
    },
    {
      "name": "simple-dev",
      "version": "10.0.0"
    }
  ],
  "vetted_partially": [],
  "vetted_with_exemptions": []
}
