src/tests/snapshots/cargo_vet__tests__vet__builtin-dev-detection-empty.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "name": "both",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-deploy"
      ]
    },
    {
      "name": "dev-cycle-direct",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-run"
      ]
    },
    {
      "name": "dev-cycle-indirect",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-run"
      ]
    },
    {
      "name": "normal",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-deploy"
      ]
    },
    {
      "name": "simple-dev",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-run"
      ]
    },
    {
      "name": "simple-dev-indirect",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-run"
      ]
    }
  ],
  "suggest": {
    "suggestions": [
      {
        "name": "both",
        "notable_parents": "root",
        "suggested_criteria": [
          "safe-to-deploy"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "insertions": 100,
            "deletions": 0,
            "files_changed": 1
          }
        }
      },
      {
        "name": "dev-cycle-direct",
        "notable_parents": "root",
        "suggested_criteria": [
          "safe-to-run"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "insertions": 100,
            "deletions": 0,
            "files_changed": 1
          }
        }
      },
      {
        "name": "dev-cycle-indirect",
        "notable_parents": "dev-cycle-direct",
        "suggested_criteria": [
          "safe-to-run"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "insertions": 100,
            "deletions": 0,
            "files_changed": 1
          }
        }
      },
      {
        "name": "normal",
        "notable_parents": "root",
        "suggested_criteria": [
          "safe-to-deploy"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "insertions": 100,
            "deletions": 0,
            "files_changed": 1
          }
        }
      },
      {
        "name": "simple-dev",
        "notable_parents": "root",
        "suggested_criteria": [
          "safe-to-run"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "insertions": 100,
            "deletions": 0,
            "files_changed": 1
          }
        }
      },
      {
        "name": "simple-dev-indirect",
        "notable_parents": "simple-dev",
        "suggested_criteria": [
          "safe-to-run"
        ],
        "suggested_diff": {
          "from": null,
          "to": "10.0.0",
          "diffstat": {
            "insertions": 100,
            "deletions": 0,
            "files_changed": 1
          }
        }
      }
    ],
    "suggest_by_criteria": {
      "safe-to-deploy": [
        {
          "name": "both",
          "notable_parents": "root",
          "suggested_criteria": [
            "safe-to-deploy"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "insertions": 100,
              "deletions": 0,
              "files_changed": 1
            }
          }
        },
        {
          "name": "normal",
          "notable_parents": "root",
          "suggested_criteria": [
            "safe-to-deploy"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "insertions": 100,
              "deletions": 0,
              "files_changed": 1
            }
          }
        }
      ],
      "safe-to-run": [
        {
          "name": "dev-cycle-direct",
          "notable_parents": "root",
          "suggested_criteria": [
            "safe-to-run"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "insertions": 100,
              "deletions": 0,
              "files_changed": 1
            }
          }
        },
        {
          "name": "dev-cycle-indirect",
          "notable_parents": "dev-cycle-direct",
          "suggested_criteria": [
            "safe-to-run"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "insertions": 100,
              "deletions": 0,
              "files_changed": 1
            }
          }
        },
        {
          "name": "simple-dev",
          "notable_parents": "root",
          "suggested_criteria": [
            "safe-to-run"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "insertions": 100,
              "deletions": 0,
              "files_changed": 1
            }
          }
        },
        {
          "name": "simple-dev-indirect",
          "notable_parents": "simple-dev",
          "suggested_criteria": [
            "safe-to-run"
          ],
          "suggested_diff": {
            "from": null,
            "to": "10.0.0",
            "diffstat": {
              "insertions": 100,
              "deletions": 0,
              "files_changed": 1
            }
          }
        }
      ]
    },
    "total_lines": 600
  }
}
