src/tests/snapshots/cargo_vet__tests__vet__builtin-haunted-init.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "conclusion": "success",
  "vetted_fully": [],
  "vetted_partially": [],
  "vetted_with_exemptions": [
    {
      "name": "third-normal",
      "version": "10.0.0"
    },
    {
      "name": "third-dev",
      "version": "10.0.0"
    }
  ]
}
