src/tests/snapshots/cargo_vet__tests__vet__builtin-haunted-minimal-audited.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "conclusion": "success",
  "vetted_fully": [
    {
      "name": "third-normal",
      "version": "10.0.0"
    },
    {
      "name": "third-dev",
      "version": "10.0.0"
    }
  ],
  "vetted_partially": [],
  "vetted_with_exemptions": []
}
