src/tests/snapshots/cargo_vet__tests__vet__builtin-only-first-deps.json.snap
---
source: src/tests/vet.rs
expression: json
---
{
  "conclusion": "success",
  "vetted_fully": [],
  "vetted_partially": [],
  "vetted_with_exemptions": []
}
